add the first steps of the annotation preprocessing